[gd_scene load_steps=3 format=3 uid="uid://t2norfbrf3rx"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_37bpi"]
[ext_resource type="Texture2D" uid="uid://c5djkrc33vxxb" path="res://Sprites/Image titre.jpg" id="2_ef0u7"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37bpi")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.63, 0.63)
texture = ExtResource("2_ef0u7")

[node name="MarginContainer" type="MarginContainer" parent="Sprite2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -610.0
offset_top = -653.4
offset_right = -540.0
offset_bottom = -552.4
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.8, 2.8)

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D/MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="Sprite2D/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="Sprite2D/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="Sprite2D/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="MarginContainer2" type="MarginContainer" parent="Sprite2D"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -604.4
offset_top = -604.4
offset_right = -537.4
offset_bottom = -538.4
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.8, 2.8)

[node name="VBoxContainer" type="VBoxContainer" parent="Sprite2D/MarginContainer2"]
layout_mode = 2

[node name="Volume" type="Button" parent="Sprite2D/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Back" type="Button" parent="Sprite2D/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Sprite2D/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Sprite2D/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Sprite2D/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Sprite2D/MarginContainer2/VBoxContainer/Back" to="." method="_on_back_pressed"]
